Fix line wrapping on mobile

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -22,7 +22,8 @@ body
 #title-caption
   color:title-caption-c
   vertical-align: -24px
-  font-size:24pt
+  font-size:20pt
+  white-space:nowrap
 
 #content
   background-color:content-bg-c
